syntax = "proto3";
package demo;

import "google/api/annotations.proto";

option java_package = "com.apzda.cloud.demo.demo.proto";
option java_multiple_files = true;
option java_outer_classname = "DemoProto";


message DemoReq {
  optional string name = 1;
  optional uint32 age = 2;
}

message DemoRes {
  int32 err_code = 1;
  optional string err_msg = 2;
  optional string name = 3;
  optional uint32 age = 4;
}

service DemoService {
  rpc greeting(DemoReq) returns (DemoRes) {
    option(google.api.http) = {
      get: "/hello"
    };
  }
}
